# Debrief

./: .gitignore  Context.md  DEPLOYMENT.md  brutal_audit.md  implementation_plan.md
backend/: .env.example  .env.render.example  .gitignore  README.md  main.py  pyproject.toml  render.yaml
backend/app/: config.py  database.py
backend/app/models/: debrief.py  media.py  visit.py
backend/app/routers/: dashboard.py  debriefs.py  media.py  visits.py
backend/app/services/: debrief_chain.py  llm_client.py  patterns.py  transcription.py  vision.py
backend/app/utils/: storage.py
backend/migrations/: 001_initial_schema.sql  002_make_block_optional.sql  003_add_postal_code.sql
frontend/: .gitignore  README.md  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.js  manifest.js
frontend/app/dashboard/: page.js
frontend/app/log/: page.js
frontend/app/map/: page.js
frontend/app/patterns/: page.js
frontend/app/ping/: page.js
frontend/app/visit/: page.js
frontend/app/visits/: page.js
frontend/components/dashboard/: DebriefTable.js  FilterBar.js  StatsRow.js
frontend/components/debrief/: BlockerList.js  DebriefCard.js  FollowUpList.js  SentimentBadge.js
frontend/components/layout/: MobileNav.js  RoleSwitcher.js
frontend/components/map/: VisitMap.js
frontend/components/patterns/: BlockerHeatmap.js  SentimentTrend.js
frontend/components/ui/: Badge.js  Button.js  EmptyState.js  Input.js  LoadingPanel.js  PageHeader.js
frontend/lib/: api.js  constants.js  utils.js
frontend/public/: sw.js
(+6 files in other folders)
