[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the field visit debrief tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "supabase>=2.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]
